# planning-inconsistency-measures

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  cli.py  docker-compose.yml  example1_facts_rules.lp  example3_choice.lp  expected_profiles.txt  pyproject.toml  requirements.txt  run.sh
config/: defaults.lp
encodings/: bridge_plasp.lp  measures.lp  planning.lp  reachability.lp
encodings/measures/: mutex.lp  sequencing.lp  unreachability.lp
pddl/: blocksworld-domain.pddl  problem-goalmutex.pddl  problem-solvable.pddl  problem-unreachable.pddl
planning_measures/: __init__.py  __main__.py  batch.py  batch_translator.py  benchmark_layout.py  brave.py  cli.py  execution.py  extraction.py  measures.py  pddl_pipeline.py  pddl_preprocessor.py  profile.py  solver.py  translator.py
results/: 20260309_bottleneck.csv  20260309_diagnosis.csv  202603113_unsat.csv  3unsat.csv  README.md  bottleneck.csv  cave-diving.csv  chessboard-pebbling.csv  diagnosis.csv  document-transfer.csv  pegsol-row5.csv
scenarios/: bank_vault.lp  empty_goals.lp
tests/: run_all_tests.sh  test_batch_translate.sh  test_benchmark_layout.py  test_brave.py  test_execution.py  test_experiment_runner.sh  test_extraction.py  test_measures.py  test_measures.sh  test_pddl_pipeline.py  test_plasp.py  test_profile.py  test_solver.py  test_translator.py  test_translator.sh  verify_measures.sh
tests/pddl/: README.md  locked_door_domain.pddl  locked_door_problem.pddl  trust_travel_domain.pddl  trust_travel_problem.pddl
tests/pddl/locked_door/: domain.pddl  (+1 more)
tests/scenarios/: README.md  expected_profiles.txt
tools/: batch_translate.py  horizon_analysis.sh  pddl_to_asp.py  run_experiments.sh  verify_solvable.sh
tools/lib/: aggregate_witnesses.sh
translations/: goalmutex.lp  solvable.lp
tutorials/: 01_basics.lp  example2_constraints.lp  example2b_constraint_elimination.lp  solution_exercise124.lp  solution_exercise3.lp
(+14 files in other folders)
