[project]
name = "planning-measures"
version = "2.0.0"
description = "Inconsistency measures for classical planning problems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["clingo>=5.6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
planning-measures = "planning_measures.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["planning_measures"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
