[project]
name = "planning-inconsistency-measures"
version = "1.0.0"
description = "Inconsistency measures for classical planning problems via ASP"
readme = "README.md"
license = "MIT"
authors = [{ name = "Sebastian Bunge" }]
requires-python = ">=3.10"
dependencies = ["clingo>=5.6.0"]

[project.urls]
Repository = "https://github.com/BlueberryDuck/planning-inconsistency-measures"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
planning-measures = "planning_measures.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["planning_measures"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
